# tokentriage

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  chainlit.md  demo_chainlit.py  docker-compose.yml  pyproject.toml  render.yaml
.agents/skills/web-artifacts-builder/: SKILL.md
benchmarks/: judge_trace.jsonl  test_queries.jsonl
config/: policy.yaml
docs/: CAPSTONE_NARRATIVE.md  DEMO_SCRIPT.md  SCIENTIFIC_REPORT.md  SOFTWARE_QUALITY.md  architecture-embed.html  architecture.md  presentation.html
reports/latest/: metrics.json  report.md  routing_results.csv
reports/run_20260705_172557/: dashboard.html
src/tokentriage/: cli.py  config.py  db.py  evidence.py  providers.py
src/tokentriage/agents/: orchestrator.py  triage.py  verifier.py
src/tokentriage/cache/: semantic_cache.py
src/tokentriage/demo/: replay.py
src/tokentriage/mcp_server/: server.py  tools.py
src/tokentriage/models/: registry.py
src/tokentriage/proxy/: app.py  architecture.html  chat.html  dashboard.html
src/tokentriage/security/: budget.py  gateway.py
tests/: conftest.py  test_api_compat.py  test_demo_replay.py  test_evidence.py  test_orchestrator.py  test_privacy_context.py  test_providers.py  test_routing.py  test_security.py
