[project]
name = "tokentriage"
version = "0.1.0"
description = "Inference Cost Engine — cost-aware multi-agent LLM routing"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk>=2.0",          # Agent Development Kit (triage/verifier run on this)
    "litellm>=1.40",            # lets ADK agents run on local Ollama models
    "google-genai>=1.0",        # Gemini client (optional cloud tiers + embeddings)
    "mcp>=1.0",                 # Model Context Protocol SDK (our custom server)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "chainlit>=1.3",
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",              # Ollama API calls + cloud clients
    "python-dotenv>=1.0",       # load .env
    "numpy>=1.26",              # cosine similarity for semantic cache
]

[project.scripts]
tokentriage = "tokentriage.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
